Change pug main file dir

--- a/src/index.pug
+++ b/src/index.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
   head
     title Bruno Pinela
-    link(href='/src/styles/main.css', rel='stylesheet')
+    link(href='favicon.ico', rel='icon' type='image/x-icon')
   body
     div.typewriter
       h1 Under maintenance
