Externalize head onto a file also includes it in main file

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,9 +1,8 @@
 doctype html
 html(lang="en")
-  head
-    title Bruno Pinela
-    link(href='favicon.ico', rel='icon' type='image/x-icon')
+  include view/head.pug
   body
-    div.typewriter
-      h1 Under maintenance
+    include view/left-sidebar.pug
+    //- div.typewriter
+    //-   h1 Under maintenance
     footer © 2019 - WebSite built with ☕ and ❤ by Bruno Pinela
