--- a/src/index.pug
+++ b/src/index.pug
@@ -1,8 +1,10 @@
+- var name = 'pineladsn'
 doctype html
 html(lang="en")
-  include view/head.pug
+  head
+    title Bruno Pinela
   body
-    include view/left-sidebar.pug
-    //- div.typewriter
-    //-   h1 Under maintenance
+    include views/navbar.pug
+    h1 Made by #{name}
+    a.waves-effect.waves-light.btn button
     footer © 2019 - WebSite built with ☕ and ❤ by Bruno Pinela
