Change name const

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,9 +1,9 @@
-- var name = 'pineladsn'
+- var name = 'Bruno Pinela'
 doctype html
 html(lang="en")
   head
-    title Bruno Pinela
+    title #{name}
   body
     include views/navbar.pug
     h1 Made by #{name}
-    footer © 2019 - WebSite built with ☕ and ❤ by Bruno Pinela
+    footer © 2019 - WebSite built with ☕ and ❤ by #{name}
